<resources>
    <string name="app_name">LostandFoundApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="LostandFound">Lost and Found</string>
    <string name="ReportLostItem">Report Lost Item</string>
    <string name="ClaimItem">Claim Item</string>
    <string name="LostItemImage">Lost Item Image</string>
    <string name="ItemName">Item Name</string>
    <string name="ItemCategory">Item Category</string>
    <string name="ItemDateandTime">Item Date and Time</string>
    <string name="ItemLocation">Item Location</string>
    <string name="ItemDescription">Item Description</string>
    <string name="ItemDetails">Item Details</string>
    <string name="feature1">Lost your item somewhere?</string>
    <string name="feature2">Don’t know where to search?</string>
    <string name="feature3">Don’t worry we got you covered</string>
    <string name="loginorregister">Login or Register</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enterdetails">Enter the details below</string>
    <string name="createaccount">Create Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="accountsuccessful">Account has been successfully created</string>
    <string name="category">Category</string>
    <string name="dateandtime">Date and Time</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="details">Details</string>
    <string name="takepart">Take a part in the change now</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_feature">FeatureActivity</string>
    <string name="hide_details">Hide Details</string>
    <string name="show_details">Show Details</string>
    <string name="id_number">ID Number</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="create_account">Create Account</string>
    <string name="back">Back</string>
    <string name="proceed_to_home">Proceed to Home</string>
    <string name="loading">Loading...</string>
    <string name="logout">Logout</string>
    <string name="fill_up_the_item_details">Fill up the item details</string>
    <string name="photo">Photo</string>
    <string name="date_and_time">Date and Time</string>

    <string-array name="category_array">
        <item>Category</item>
        <item>Essentials</item>
        <item>Electronics</item>
        <item>Clothing</item>
        <item>Accessories</item>
        <item>Stationary</item>
        <item>Miscellaneous</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="proceed_to_pickup_location">Proceed to Pickup Location</string>
    <string name="follow_the_directions_to_claim_the_item">Follow the directions to claim the item</string>
    <string name="claim_proceed_image">Claim Proceed Image</string>
    <string name="proceed">Proceed</string>
    <string name="location_pin">📍Location</string>
    <string name="security_office_on_the_1st_floor_of_sa_student_s_association_building">Security Office on the 1st Floor of SA (Student’s Association) Building</string>
    <string name="claim_lost_item">Claim Lost Item</string>
    <string name="check_your_personal_details_before_proceeding_to_claim_the_item">Check your personal details before proceeding to claim the item</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="add_photo">Add Photo</string>
    <string name="details_of_item">Details of Item</string>
    <string name="date_and_time_found">Date and Time Found</string>
    <string name="location_found">Location Found</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="lostandfound_is_an_application_designed_and_built_from_scratch_for_the_purpose_of_completing_the_module_mobile_device_programming_comp3040_this_app_is_designed_to_help_people_find_their_lost_items_and_also_help_people_who_found_items_to_return_them_to_their_owners_this_app_is_built_using_kotlin_and_google_firebase_to_store_the_data">LostandFound is an application designed and built from scratch for the purpose of completing the module Mobile Device Programming COMP3040. This app is designed to help people find their lost items and also help people who found items to return them to their owners. This app is built using Kotlin and Google Firebase to store the data.</string>
    <string name="about_lostandfound">About LostandFound</string>
    <string name="security_nottingham_edu_my">security@nottingham.edu.my</string>
    <string name="_603_8924_8065">+603 8924 8065</string>
    <string name="close_preview">Close preview</string>
    <string name="item_name">Item Name</string>
    <string name="please_fill_in_the_form_to_report_a_lost_item">Please fill in the form to report a lost item</string>
    <string name="make_sure_to_place_the_item_in_the_box_in_front_of_the_security_office_located_in_the_1st_floor_of_the_sa_building">Make sure to place the Item in the box in front of the Security Office located in the 1st Floor of the SA Building</string>
    <string name="boxinsecurityoffice">BoxinSecurityOffice</string>
    <string name="sa_building_1st_floor">SA Building 1st Floor</string>
    <string name="security_location">2.9438464321265827, 101.8759196217144</string>
    <string name="claimed">Claimed</string>
    <string name="item_has_been_claimed">Item has been claimed</string>

</resources>