<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ClaimProceedActivity"
    android:layout_gravity="center"
    >

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@null"
        android:contentDescription="@string/back"
        android:padding="8dp"
        android:src="@drawable/arrow_left"
        app:layout_constraintBottom_toTopOf="@+id/feature_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/feature_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proceed_to_pickup_location"
        app:layout_constraintTop_toTopOf="@id/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/feature_image"
        android:fontFamily="@font/product_sans_bold"
        android:textSize="32sp"
        android:paddingHorizontal="32dp"
        />

    <TextView
        android:id="@+id/report_desc_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/follow_the_directions_to_claim_the_item"
        app:layout_constraintTop_toBottomOf="@id/feature_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/product_sans_regular"
        android:textColor="@color/light_grey"
        android:textSize="16sp"
        android:paddingHorizontal="32dp"
        android:layout_marginTop="8dp"
        />


    <ImageView
        android:id="@+id/feature_image"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:srcCompat="@drawable/claimproceed"
        android:contentDescription="@string/claim_proceed_image"
        android:adjustViewBounds="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/report_desc_text"
        app:layout_constraintBottom_toTopOf="@id/button_container"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/feature_image"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_pin"
            app:layout_constraintTop_toBottomOf="@id/feature_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/product_sans_bold"
            android:textColor="@color/light_grey"
            android:textSize="16sp"
            android:paddingHorizontal="32dp"
            android:layout_marginTop="8dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/security_office_on_the_1st_floor_of_sa_student_s_association_building"
            app:layout_constraintTop_toBottomOf="@id/feature_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/product_sans_regular"
            android:textColor="@color/light_grey"
            android:textSize="16sp"
            android:paddingHorizontal="32dp"
            android:layout_marginTop="8dp"
            />


        <Button
            android:id="@+id/proceed_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/product_sans_bold"
            android:text="@string/proceed"
            android:textSize="18sp"
            android:paddingVertical="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/feature_image"
            android:layout_marginTop="16dp"
            />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>